--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "dependencies": {
     "@line/bot-sdk": "^9.7.1",
-    "axios": "^1.6.0",
-    "googleapis": "^148.0.0"
+    "axios": "^1.6.0"
   }
 }
